# trezoa

./: .codecov.yml  .gitignore  .mergify.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md  VERIFICATION_GUIDE.md  VERIFICATION_SUMMARY.md  clippy.toml  fetch-core-bpf.sh  fetch-perf-libs.sh  fetch-programs.sh  fetch-spl.sh  fetch-tpl.sh  nextest.toml  run.sh  trezoa-keys-verification-20260120-110507.txt  trezoa-keys-verification-20260120-110531.txt  trezoa-verification-report-20260120-110454.txt  verify-keys-simple.sh  verify-trezoa-migration.sh
account-decoder/: Cargo.toml
account-decoder-client-types/: Cargo.toml
account-decoder-client-types/src/: lib.rs
account-decoder/src/: lib.rs  parse_account_data.rs  parse_address_lookup_table.rs  parse_bpf_loader.rs  parse_config.rs  parse_nonce.rs  parse_stake.rs  parse_sysvar.rs  parse_token.rs  parse_token_extension.rs  parse_vote.rs  validator_info.rs
accounts-bench/: Cargo.toml
accounts-bench/src/: main.rs
accounts-cluster-bench/: Cargo.toml
accounts-cluster-bench/src/: main.rs
accounts-db/: Cargo.toml
accounts-db/benches/: accounts.rs  accounts_index.rs  append_vec.rs  bench_accounts_file.rs  bench_hashing.rs  bench_lock_accounts.rs  bench_serde.rs  read_only_accounts_cache.rs  utils.rs
accounts-db/src/: account_locks.rs  account_overrides.rs  account_storage.rs  account_storage_entry.rs  account_storage_reader.rs  accounts.rs  accounts_cache.rs  accounts_db.rs  accounts_file.rs  accounts_hash.rs  accounts_index.rs  accounts_partition.rs  accounts_update_notifier_interface.rs  ancestors.rs  ancient_append_vecs.rs  append_vec.rs  blockhash_queue.rs  bucket_map_holder.rs  bucket_map_holder_stats.rs  cache_hash_data.rs  epoch_accounts_hash.rs  hardened_unpack.rs  in_mem_accounts_index.rs  inline_tpl_token.rs  inline_tpl_token_2022.rs  lib.rs  nonce_info.rs  obsolete_accounts.rs  partitioned_rewards.rs  pubkey_bins.rs  read_only_accounts_cache.rs  rent_collector.rs  rent_debits.rs  rolling_bit_field.rs  secondary_index.rs  shared_buffer_reader.rs  sorted_storages.rs  stake_rewards.rs  storable_accounts.rs  tiered_storage.rs  (+4 more)
accounts-db/store-histogram/: Cargo.toml
accounts-db/store-tool/: Cargo.toml
accounts-db/tests/: read_only_accounts_cache.rs
banking-bench/: Cargo.toml
banking-bench/src/: main.rs
banking-stage-ingress-types/: Cargo.toml
banking-stage-ingress-types/src/: lib.rs
banks-client/: Cargo.toml
banks-client/src/: error.rs  lib.rs
banks-interface/: Cargo.toml
banks-interface/src/: lib.rs
banks-server/: Cargo.toml
banks-server/src/: banks_server.rs  lib.rs
bench-streamer/: Cargo.toml
bench-streamer/src/: main.rs
bench-tps/: Cargo.toml
bench-tps/src/: bench.rs  bench_tps_client.rs  cli.rs  keypairs.rs  lib.rs  log_transaction_service.rs  main.rs  perf_utils.rs  rpc_with_retry_utils.rs  send_batch.rs
bench-tps/tests/: bench_tps.rs
bench-vote/: Cargo.toml
bench-vote/src/: main.rs
bloom/: Cargo.toml
bloom/benches/: bloom.rs
bloom/src/: bloom.rs  lib.rs
bucket_map/: Cargo.toml
bucket_map/benches/: bucket_map.rs
bucket_map/src/: bucket.rs  bucket_api.rs  bucket_item.rs  bucket_map.rs  bucket_storage.rs  index_entry.rs  lib.rs
bucket_map/tests/: bucket_map.rs
builtins/: Cargo.toml
builtins-default-costs/: Cargo.toml
builtins-default-costs/src/: lib.rs
builtins/src/: core_bpf_migration.rs  lib.rs  prototype.rs
cargo-registry/: Cargo.toml
cargo-registry/src/: client.rs  crate_handler.rs  main.rs
clap-utils/: Cargo.toml
clap-utils/src/: input_parsers.rs  input_validators.rs  keypair.rs  lib.rs  nonce.rs
clap-v3-utils/: Cargo.toml
clap-v3-utils/src/: input_validators.rs  keypair.rs  lib.rs  nonce.rs  offline.rs
cli/: Cargo.toml
cli-config/: Cargo.toml
cli-config/src/: config.rs  config_input.rs  lib.rs
cli-output/: Cargo.toml
cli-output/src/: cli_output.rs  display.rs  lib.rs
cli/src/: address_lookup_table.rs  checks.rs  clap_app.rs  cli.rs  cluster_query.rs  compute_budget.rs  compute_unit_price.rs  feature.rs  inflation.rs  main.rs  memo.rs  nonce.rs  program.rs  program_v4.rs  spend_utils.rs  stake.rs  test_utils.rs  validator_info.rs  vote.rs  wallet.rs
cli/tests/: address_lookup_table.rs  cluster_query.rs  nonce.rs  program.rs  request_airdrop.rs  stake.rs  transfer.rs  validator_info.rs  vote.rs
client/: Cargo.toml
client-test/: Cargo.toml
client-test/tests/: client.rs  send_and_confirm_transactions_in_parallel.rs
client/src/: connection_cache.rs  lib.rs  quic_client.rs  send_and_confirm_transactions_in_parallel.rs  thin_client.rs  tpu_client.rs  tpu_connection.rs  transaction_executor.rs  udp_client.rs
compute-budget/: Cargo.toml
compute-budget-instruction/: Cargo.toml
compute-budget-instruction/benches/: process_compute_budget_instructions.rs
compute-budget-instruction/src/: builtin_programs_filter.rs  compute_budget_instruction_details.rs  compute_budget_program_id_filter.rs  instructions_processor.rs  lib.rs
compute-budget/src/: compute_budget.rs  compute_budget_limits.rs  lib.rs
connection-cache/: Cargo.toml
connection-cache/src/: client_connection.rs  connection_cache.rs  lib.rs
core/: Cargo.toml
core/benches/: banking_stage.rs  banking_trace.rs  consensus.rs  consumer.rs  gen_keys.rs  receive_and_buffer.rs  receive_and_buffer_utils.rs  scheduler.rs  shredder.rs  sigverify_stage.rs
core/src/: accounts_hash_verifier.rs  admin_rpc_post_init.rs  banking_simulation.rs  banking_stage.rs  banking_trace.rs  block_creation_loop.rs  cache_block_meta_service.rs  cluster_info_vote_listener.rs  cluster_slots_service.rs  commitment_service.rs  completed_data_sets_service.rs  consensus.rs  cost_update_service.rs  drop_bank_service.rs  fetch_stage.rs  forwarding_stage.rs  gen_keys.rs  lib.rs  mock_alpenglow_consensus.rs  next_leader.rs  optimistic_confirmation_verifier.rs  poh_timing_report_service.rs  poh_timing_reporter.rs  replay_stage.rs  resource_limits.rs  result.rs  rewards_recorder_service.rs  sample_performance_service.rs  scheduler_bindings_server.rs  sigverify.rs  (+17 more)
(+1864 files in other folders)
