[workspace]
members = [
    "account-decoder",
    "account-decoder-client-types",
    "accounts-cluster-bench",
    "accounts-db",
    "accounts-db/store-histogram",
    "banking-stage-ingress-types",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bench-streamer",
    "bench-vote",
    "bloom",
    "bucket_map",
    "builtins",
    "builtins-default-costs",
    "cargo-registry",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "compute-budget",
    "compute-budget-instruction",
    "connection-cache",
    "core",
    "cost-model",
    "download-utils",
    "entry",
    "faucet",
    "feature-set",
    "fee",
    "fs",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "gossip-bin",
    "install",
    "io-uring",
    "keygen",
    "lattice-hash",
    "ledger",
    "local-cluster",
    "logger",
    "measure",
    "merkle-tree",
    "metrics",
    "net-utils",
    "notifier",
    "perf",
    "platform-tools-sdk/cargo-build-sbf",
    "platform-tools-sdk/cargo-test-sbf",
    "platform-tools-sdk/gen-headers",
    "poh",
    "poh-bench",
    "precompiles",
    "program-binaries",
    "program-runtime",
    "program-test",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/compute-budget",
    "programs/compute-budget-bench",
    "programs/ed25519-tests",
    "programs/loader-v4",
    "programs/system",
    "programs/vote",
    "programs/zk-elgamal-proof",
    "programs/zk-elgamal-proof-tests",
    "programs/zk-token-proof",
    "pubsub-client",
    "quic-client",
    "random",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "reserved-account-keys",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-client-types",
    "rpc-test",
    "runtime",
    "runtime-transaction",
    "scheduler-bindings",
    "scheduling-utils",
    "send-transaction-service",
    "snapshots",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
    "streamer",
    "svm",
    "svm-callback",
    "svm-feature-set",
    "svm-log-collector",
    "svm-measure",
    "svm-test-harness",
    "svm-test-harness/fixture",
    "svm-test-harness/instr",
    "svm-timings",
    "svm-transaction",
    "svm-type-overrides",
    "syscalls",
    "syscalls/gen-syscall-list",
    "test-validator",
    "thread-manager",
    "tls-utils",
    "tokens",
    "tps-client",
    "tpu-client",
    "tpu-client-next",
    "transaction-context",
    "transaction-dos",
    "transaction-metrics-tracker",
    "transaction-status",
    "transaction-status-client-types",
    "transaction-view",
    "turbine",
    "udp-client",
    "unified-scheduler-logic",
    "unified-scheduler-pool",
    "validator",
    "verified-packet-receiver",
    "version",
    "vortexor",
    "vote",
    "votor",
    "votor-messages",
    "watchtower",
    "wen-restart",
    "xdp",
    "xdp-ebpf",
]

exclude = [
    # trezoa-dos depends on bench-tps. ignore bench-tps here to avoid confusing cargo's
    # workspace resolution logic, which expects it in the top-level worspace rather than
    # dev-bins
    "bench-tps",
    "ci/xtask",
    "dev-bins",
    "programs/sbf",
    "svm/tests/example-programs",
]

resolver = "2"

[workspace.package]
version = "4.0.0-alpha.0"
authors = ["Trezoa-team Maintainers <maintainers@trezoa.xyz>"]
description = "Blockchain, Rebuilt for Scale"
repository = "https://github.com/trezoa-xyz/trezoa"
homepage = "https://trezoa.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
# List of rust-2024-compatibility lints that are already satisfied
# See https://doc.rust-lang.org/rustc/lints/groups.html
boxed_slice_into_iter = "deny"
dependency_on_unit_never_type_fallback = "deny"
deprecated_safe_2024 = "deny"
impl_trait_overcaptures = "deny"
missing_unsafe_on_extern = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
rust_2024_guarded_string_incompatible_syntax = "deny"
rust_2024_incompatible_pat = "deny"
rust_2024_prelude_collisions = "deny"
static_mut_refs = "deny"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("trezoa"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace.dependencies]
Inflector = "0.11.4"
trezoa-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-cargo-registry = { path = "cargo-registry", version = "=4.0.0-alpha.0" }
trezoa-feature-set = { path = "feature-set", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-fs = { path = "fs", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=4.0.0-alpha.0" }
trezoa-io-uring = { path = "io-uring", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-logger = { path = "logger", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-precompiles = { path = "precompiles", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-random = { path = "random", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-reserved-account-keys = { path = "reserved-account-keys", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-scheduler-bindings = { path = "scheduler-bindings", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-scheduling-utils = { path = "scheduling-utils", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-snapshots = { path = "snapshots", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-syscalls = { path = "syscalls", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-thread-manager = { path = "thread-manager", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-transaction-view = { path = "transaction-view", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-verified-packet-receiver = { path = "verified-packet-receiver", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-votor = { path = "votor", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-votor-messages = { path = "votor-messages", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-xdp = { path = "xdp", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-xdp-ebpf = { path = "xdp-ebpf", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
ahash = "0.8.12"
anyhow = "1.0.100"
aquamarine = "0.6.0"
arbitrary = "1.4.2"
arc-swap = "1.8.0"
array-bytes = "=1.4.1"
arrayref = "0.3.9"
arrayvec = "0.7.6"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-lock = "3.4.2"
async-trait = "0.1.89"
atty = "0.2.11"
axum = "0.8.8"
aya = "0.13"
aya-ebpf = "0.1.1"
backoff = "0.4.0"
base64 = "0.22.1"
bencher = "0.1.5"
bincode = "1.3.3"
bitflags = { version = "2.10.0" }
bitvec = { version = "1.0.1", features = ["serde"] }
blake3 = "1.8.3"
borsh = { version = "1.6.0", features = ["derive", "unstable__schema"] }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
byte-unit = "4.0.19"
bytemuck = "1.24.0"
bytemuck_derive = "1.10.2"
bytes = "1.11"
bzip2 = "0.6.1"
caps = "0.5.6"
cargo_metadata = "0.15.4"
cfg-if = "1.0.4"
cfg_eval = "0.1.2"
chrono = { version = "0.4.42", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
console = "0.16.2"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.35"
core_affinity = "0.8.3"
criterion = "0.8.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.15"
csv = "1.4.0"
ctrlc = "3.5.1"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derive-where = "1.6.0"
derive_more = { version = "2.1.1", features = ["full"] }
dialoguer = "0.12.0"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.8.2"
dyn-clone = "1.0.20"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
enum-iterator = "2.3.0"
env_logger = "0.11.8"
fast-math = "0.1"
fd-lock = "4.0.4"
five8_const = "0.1.4"
flate2 = "1.0.31"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.29"
gag = "1.0.0"
gethostname = "1.1.0"
getrandom = "0.3.4"
goauth = "0.13.1"
governor = "0.6.3"
hex = "0.4.3"
hidapi = { version = "2.6.4", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.3.0"
hyper = "0.14.32"
hyper-proxy = "0.9.1"
im = "15.1.0"
indexmap = "2.13.0"
indicatif = "0.18.3"
io-uring = { version = "0.7.11", features = ["io_safety"] }
itertools = "0.14.0"
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.83"
json5 = "1.3.0"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
libc = "0.2.180"
libloading = "0.9.0"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
log = "0.4.29"
lru = "0.7.7"
lz4 = "1.28.1"
memmap2 = "0.9.9"
memoffset = "0.9.1"
min-max-heap = "1.3.0"
mockall = "0.14.0"
modular-bitfield = "0.13.1"
nix = "0.30.1"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.17.0"
num_enum = "0.7.4"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.12.2", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "3.1"
pretty-hex = "0.4.1"
pretty_assertions = "1.4.1"
prio-graph = "0.3.0"
proc-macro2 = "1.0.105"
proptest = "1.9"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
protosol = "2.0.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.9"
quinn-proto = "0.11.13"
quote = "1.0"
rand = "0.9.2"
rand0-7 = { package = "rand", version = "0.7" }
rand_chacha = "0.9.0"
rand_chacha0-2 = { package = "rand_chacha", version = "0.2.2" }
rayon = "1.11.0"
reed-solomon-erasure = "6.0.0"
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false }
reqwest-middleware = "0.4.2"
rolling-file = "0.2.0"
rpassword = "7.4"
rts-alloc = { version = "1.0.0" }
rustls = { version = "0.23.36", features = ["std"], default-features = false }
scopeguard = "1.2.0"
semver = "1.0.27"
seqlock = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_bytes = "0.11.19"
serde_json = "1.0.149"
serde_with = { version = "3.16.1", default-features = false }
serde_yaml = "0.9.34"
serial_test = "3.3.1"
sha2 = "0.10.9"
sha3 = "0.10.8"
shaq = { version = "1.0.1" }
shuttle = "0.7.1"
signal-hook = "0.4.1"
siphasher = "1.0.1"
slab = "0.4.11"
smallvec = { version = "1.15.1", default-features = false, features = ["union"] }
smpl_jwt = "0.7.1"
socket2 = "0.6.1"
soketto = "0.8"
trezoa-account = "3.3.0"
trezoa-account-decoder = { path = "account-decoder", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-account-decoder-client-types = { path = "account-decoder-client-types", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-account-info = "3.1.0"
trezoa-accounts-db = { path = "accounts-db", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-address = "2.0.0"
trezoa-address-lookup-table-interface = "3.0.1"
trezoa-atomic-u64 = "3.0.0"
trezoa-banks-client = { path = "banks-client", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-banks-interface = { path = "banks-interface", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-banks-server = { path = "banks-server", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-big-mod-exp = "3.0.0"
trezoa-bincode = "3.1.0"
trezoa-blake3-hasher = "3.1.0"
trezoa-bloom = { path = "bloom", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-bls-signatures = { version = "2.0.0-alpha.1", features = ["serde"] } #TODO: change to 2.0.0 before this gets into 4.0
trezoa-bn254 = "3.1.2"
trezoa-borsh = "3.0.0"
trezoa-bpf-loader-program = { path = "programs/bpf_loader", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-bucket-map = { path = "bucket_map", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-builtins = { path = "builtins", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-builtins-default-costs = { path = "builtins-default-costs", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-clap-utils = { path = "clap-utils", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-clap-v3-utils = { path = "clap-v3-utils", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-cli = { path = "cli", version = "=4.0.0-alpha.0", default-features = false }
trezoa-cli-config = { path = "cli-config", version = "=4.0.0-alpha.0" }
trezoa-cli-output = { path = "cli-output", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-client = { path = "client", version = "=4.0.0-alpha.0" }
trezoa-client-traits = "3.0.0"
trezoa-clock = "3.0.0"
trezoa-cluster-type = "3.0.0"
trezoa-commitment-config = "3.1.0"
trezoa-compute-budget = { path = "compute-budget", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-compute-budget-instruction = { path = "compute-budget-instruction", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-compute-budget-interface = "3.0.0"
trezoa-compute-budget-program = { path = "programs/compute-budget", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-config-interface = "2.0.0"
trezoa-connection-cache = { path = "connection-cache", version = "=4.0.0-alpha.0", default-features = false, features = ["trezoa-unstable-api"] }
trezoa-core = { path = "core", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-cost-model = { path = "cost-model", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-cpi = "3.1.0"
trezoa-curve25519 = "4.0.0"
trezoa-define-syscall = "4.0.1"
trezoa-derivation-path = "3.0.0"
trezoa-download-utils = { path = "download-utils", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-ed25519-program = "3.0.0"
trezoa-entry = { path = "entry", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-epoch-info = "3.1.0"
trezoa-epoch-rewards = "3.0.0"
trezoa-epoch-rewards-hasher = "3.1.0"
trezoa-epoch-schedule = "3.0.0"
trezoa-example-mocks = "3.0.0"
trezoa-faucet = { path = "faucet", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-feature-gate-interface = "3.0.0"
trezoa-fee = { path = "fee", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-fee-calculator = "3.0.0"
trezoa-fee-structure = "3.0.0"
trezoa-file-download = "3.1.0"
trezoa-frozen-abi = "3.1.2"
trezoa-frozen-abi-macro = "3.2.1"
trezoa-genesis = { path = "genesis", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-genesis-config = "3.0.0"
trezoa-genesis-utils = { path = "genesis-utils", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-gossip = { path = "gossip", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-hard-forks = "3.0.0"
trezoa-hash = "3.1.0"
trezoa-inflation = "3.0.0"
trezoa-instruction = "3.1.0"
trezoa-instruction-error = "2.1.0"
trezoa-instructions-sysvar = "3.0.0"
trezoa-keccak-hasher = "3.1.0"
trezoa-keypair = "3.1.0"
trezoa-last-restart-slot = "3.0.0"
trezoa-lattice-hash = { path = "lattice-hash", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-ledger = { path = "ledger", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-loader-v2-interface = "3.0.0"
trezoa-loader-v3-interface = "6.1.0"
trezoa-loader-v4-interface = "3.1.0"
trezoa-loader-v4-program = { path = "programs/loader-v4", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-local-cluster = { path = "local-cluster", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-measure = { path = "measure", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-merkle-tree = { path = "merkle-tree", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-message = "3.0.1"
trezoa-metrics = { path = "metrics", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-msg = "3.0.0"
trezoa-native-token = "3.0.0"
trezoa-net-utils = { path = "net-utils", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-nohash-hasher = "0.2.1"
trezoa-nonce = "3.0.0"
trezoa-nonce-account = "3.0.0"
trezoa-notifier = { path = "notifier", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-offchain-message = "3.0.0"
trezoa-packet = "4.0.0"
trezoa-perf = { path = "perf", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-poh = { path = "poh", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-poh-config = "3.0.0"
trezoa-poseidon = "4.0.0"
trezoa-precompile-error = "3.0.0"
trezoa-presigner = "3.0.0"
trezoa-program = { version = "3.0.0", default-features = false }
trezoa-program-binaries = { path = "program-binaries", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-program-entrypoint = "3.1.1"
trezoa-program-error = "3.0.0"
trezoa-program-memory = "3.1.0"
trezoa-program-option = "3.0.0"
trezoa-program-pack = "3.0.0"
trezoa-program-runtime = { path = "program-runtime", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-program-test = { path = "program-test", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-pubkey = { version = "4.0.0", default-features = false }
trezoa-pubsub-client = { path = "pubsub-client", version = "=4.0.0-alpha.0" }
trezoa-quic-client = { path = "quic-client", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-quic-definitions = "3.0.0"
trezoa-rayon-threadlimit = { path = "rayon-threadlimit", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-remote-wallet = { path = "remote-wallet", version = "=4.0.0-alpha.0", default-features = false, features = ["trezoa-unstable-api"] }
trezoa-rent = "3.0.0"
trezoa-reward-info = "3.0.0"
trezoa-rpc = { path = "rpc", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-rpc-client = { path = "rpc-client", version = "=4.0.0-alpha.0", default-features = false }
trezoa-rpc-client-api = { path = "rpc-client-api", version = "=4.0.0-alpha.0" }
trezoa-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "=4.0.0-alpha.0" }
trezoa-rpc-client-types = { path = "rpc-client-types", version = "=4.0.0-alpha.0" }
trezoa-runtime = { path = "runtime", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-runtime-transaction = { path = "runtime-transaction", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-sanitize = "3.0.1"
trezoa-sbpf = { version = "=0.13.1", default-features = false }
trezoa-sdk-ids = "3.1.0"
trezoa-secp256k1-program = "3.0.0"
trezoa-secp256k1-recover = "3.1.0"
trezoa-secp256r1-program = "3.0.0"
trezoa-seed-derivable = "3.0.0"
trezoa-seed-phrase = "3.0.0"
trezoa-send-transaction-service = { path = "send-transaction-service", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-serde = "3.0.0"
trezoa-serde-varint = "3.0.0"
trezoa-serialize-utils = "3.1.0"
trezoa-sha256-hasher = "3.1.0"
trezoa-short-vec = "3.1.0"
trezoa-shred-version = "3.0.0"
trezoa-signature = { version = "3.1.0", default-features = false }
trezoa-signer = "3.0.0"
trezoa-signer-store = "0.1.0"
trezoa-slot-hashes = "3.0.0"
trezoa-slot-history = "3.0.0"
trezoa-stable-layout = "3.0.0"
trezoa-stake-interface = "2.0.2"
trezoa-storage-bigtable = { path = "storage-bigtable", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-storage-proto = { path = "storage-proto", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-streamer = { path = "streamer", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm = { path = "svm", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm-callback = { path = "svm-callback", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm-feature-set = { path = "svm-feature-set", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm-log-collector = { path = "svm-log-collector", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm-measure = { path = "svm-measure", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm-test-harness = { path = "svm-test-harness", version = "=4.0.0-alpha.0" }
trezoa-svm-test-harness-fixture = { path = "svm-test-harness/fixture", version = "=4.0.0-alpha.0" }
trezoa-svm-test-harness-instr = { path = "svm-test-harness/instr", version = "=4.0.0-alpha.0" }
trezoa-svm-timings = { path = "svm-timings", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm-transaction = { path = "svm-transaction", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-svm-type-overrides = { path = "svm-type-overrides", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-system-interface = { version = "3.0", features = ["alloc","bincode","serde"] }
trezoa-system-program = { path = "programs/system", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-system-transaction = "3.0.0"
trezoa-sysvar = "3.1.1"
trezoa-sysvar-id = "3.1.0"
trezoa-test-validator = { path = "test-validator", version = "=4.0.0-alpha.0" }
trezoa-time-utils = "3.0.0"
trezoa-tls-utils = { path = "tls-utils", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-tps-client = { path = "tps-client", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-tpu-client = { path = "tpu-client", version = "=4.0.0-alpha.0", default-features = false, features = ["trezoa-unstable-api"] }
trezoa-tpu-client-next = { path = "tpu-client-next", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-transaction = "3.0.2"
trezoa-transaction-context = { path = "transaction-context", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api", "bincode"] }
trezoa-transaction-error = "3.0.0"
trezoa-transaction-metrics-tracker = { path = "transaction-metrics-tracker", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-transaction-status = { path = "transaction-status", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-transaction-status-client-types = { path = "transaction-status-client-types", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-turbine = { path = "turbine", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-udp-client = { path = "udp-client", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-validator-exit = "3.0.0"
trezoa-version = { path = "version", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-vote = { path = "vote", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-vote-interface = "5.0.0"
trezoa-vote-program = { path = "programs/vote", version = "=4.0.0-alpha.0", default-features = false, features = ["trezoa-unstable-api"] }
trezoa-wen-restart = { path = "wen-restart", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-zk-elgamal-proof-program = { path = "programs/zk-elgamal-proof", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trezoa-zk-sdk = "4.0.0"
trezoa-zk-token-proof-program = { path = "programs/zk-token-proof", version = "=4.0.0-alpha.0", features = ["trezoa-unstable-api"] }
trz-associated-token-account-interface = "2.0.0"
trz-generic-token = "2.0.0"
trz-memo-interface = "2.0.0"
trz-pod = "0.7.0"
tpl-token-2022-interface = "2.1.0"
tpl-token-confidential-transfer-proof-extraction = "0.5.1"
tpl-token-group-interface = "0.7.0"
tpl-token-interface = "2.0.0"
tpl-token-metadata-interface = "0.8.0"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.27.2"
strum_macros = "0.27.2"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.7.1"
systemstat = "0.2.5"
tar = "0.4.44"
tarpc = "0.29.0"
tempfile = "3.24.0"
test-case = "3.3.1"
thiserror = "2.0.17"
thread-priority = "3.0.0"
tiny-bip39 = "2.0.0"
tokio = "1.49.0"
tokio-serde = "0.8"
tokio-stream = "0.1.18"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.18"
toml = "0.9.11"
tonic = "0.9.2"
tonic-build = "0.9.2"
tower = "0.5.2"
tracing = "0.1"
trait-set = "0.3.0"
trees = "0.4.2"
trezor-client = { version = "0.1.5", default-features = false, features = ["trezoa"] }
tungstenite = "0.28.0"
unwrap_none = "0.1.2"
uriparse = "0.6.4"
url = "2.5.8"
vec_extract_if_polyfill = "0.1.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
wincode = { version = "0.2.5", features = ["derive", "trezoa-short-vec"] }
winreg = "0.55"
x509-parser = "0.18.0"
zstd = "0.13.3"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the trezoa-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in trezoa-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[patch.crates-io]
# for details, see https://github.com/trezoa-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/trezoa-xyz/crossbeam", rev = "648689f" }
