[package]
name = "trezoa-account-decoder-client-types"
description = "Core RPC client types for trezoa-account-decoder"
documentation = "https://docs.rs/trezoa-account-decoder-client-types"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
trezoa-unstable-api = []
zstd = ["dep:zstd"]

[dependencies]
base64 = { workspace = true }
bs58 = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }
trezoa-account = { workspace = true }
trezoa-pubkey = { workspace = true }
zstd = { workspace = true, optional = true }
