[package]
name = "trezoa-account-decoder"
description = "Trezoa account decoder"
documentation = "https://docs.rs/trezoa-account-decoder"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bv = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
trezoa-config-program = { workspace = true }
trezoa-sdk = { workspace = true }
tpl-token = { workspace = true, features = ["no-entrypoint"] }
tpl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
tpl-token-group-interface = { workspace = true }
tpl-token-metadata-interface = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tpl-pod = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
