[package]
name = "trezoa-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
trezoa-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-logger = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-version = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []
