[package]
name = "trezoa-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
trezoa-unstable-api = []
dev-context-only-utils = []

[dependencies]
trezoa-logger = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
trezoa-account-decoder = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-client = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-gossip = { workspace = true }
trezoa-hash = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-message = { workspace = true, features = ["serde", "bincode", "blake3"] }
trezoa-net-utils = { workspace = true }
trezoa-program-pack = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-rpc-client = { workspace = true, features = ["default"] }
trezoa-rpc-client-api = { workspace = true }
trezoa-signature = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-system-interface = { workspace = true, features = ["bincode"] }
trezoa-transaction = { workspace = true }
trezoa-transaction-status = { workspace = true }
trezoa-version = { workspace = true }
spl-generic-token = { workspace = true }
tpl-token-interface = { workspace = true }

[target.'cfg(not(any(target_env = "msvc", target_os = "freebsd")))'.dependencies]
jemallocator = { workspace = true }

[dev-dependencies]
trezoa-accounts-db = { workspace = true }
trezoa-core = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-faucet = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-local-cluster = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-native-token = { workspace = true }
trezoa-poh-config = { workspace = true }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-test-validator = { workspace = true }
