[package]
name = "trezoa-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
trezoa-account-decoder = { workspace = true }
trezoa-accounts-db = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-client = { workspace = true }
trezoa-faucet = { workspace = true }
trezoa-gossip = { workspace = true }
trezoa-logger = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-net-utils = { workspace = true }
trezoa-rpc-client = { workspace = true, features = ["default"] }
trezoa-runtime = { workspace = true }
trezoa-sdk = { workspace = true }
trezoa-streamer = { workspace = true }
trezoa-transaction-status = { workspace = true }
trezoa-version = { workspace = true }
tpl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
trezoa-core = { workspace = true }
trezoa-local-cluster = { workspace = true }
trezoa-runtime = { workspace = true, features = ["dev-context-only-utils"] }
trezoa-test-validator = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
