[package]
name = "trezoa-accounts-db"
description = "Trezoa accounts db"
documentation = "https://docs.rs/trezoa-accounts-db"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "trezoa_accounts_db"

[features]
trezoa-unstable-api = []
dev-context-only-utils = [
    "dep:qualifier_attr",
    "dep:trezoa-keypair",
    "dep:trezoa-rent",
    "dep:trezoa-signer",
    "dep:trezoa-stake-interface",
    "dep:trezoa-vote-program",
    "trezoa-account/dev-context-only-utils",
    "trezoa-transaction/dev-context-only-utils",
]
frozen-abi = [
    "dev-context-only-utils",
    "dep:trezoa-frozen-abi",
    "dep:trezoa-frozen-abi-macro",
    "trezoa-fee-calculator/frozen-abi",
    "trezoa-vote-program/frozen-abi",
]

[dependencies]
trezoa-fs = { workspace = true }
ahash = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
lz4 = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
qualifier_attr = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
seqlock = { workspace = true }
serde = { workspace = true, features = ["rc"] }
smallvec = { workspace = true, features = ["const_generics"] }
trezoa-account = { workspace = true, features = ["serde"] }
trezoa-address-lookup-table-interface = { workspace = true, features = [
    "bincode",
    "bytemuck",
] }
trezoa-bucket-map = { workspace = true }
trezoa-clock = { workspace = true }
trezoa-epoch-schedule = { workspace = true }
trezoa-fee-calculator = { workspace = true }
trezoa-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
trezoa-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
trezoa-genesis-config = { workspace = true, features = ["serde"] }
trezoa-hash = { workspace = true, features = ["serde"] }
trezoa-keypair = { workspace = true, optional = true }
trezoa-lattice-hash = { workspace = true }
trezoa-measure = { workspace = true }
trezoa-message = { workspace = true }
trezoa-metrics = { workspace = true }
trezoa-nohash-hasher = { workspace = true }
trezoa-pubkey = { workspace = true, features = ["rand"] }
trezoa-rayon-threadlimit = { workspace = true }
trezoa-rent = { workspace = true, optional = true }
trezoa-reward-info = { workspace = true, features = ["serde"] }
trezoa-sha256-hasher = { workspace = true }
trezoa-signer = { workspace = true, optional = true }
trezoa-slot-hashes = { workspace = true }
trezoa-stake-interface = { workspace = true, optional = true }
trezoa-svm-transaction = { workspace = true }
trezoa-system-interface = { workspace = true }
trezoa-sysvar = { workspace = true }
trezoa-time-utils = { workspace = true }
trezoa-transaction = { workspace = true }
trezoa-transaction-context = { workspace = true }
trezoa-transaction-error = { workspace = true }
trezoa-vote-program = { workspace = true, optional = true }
spl-generic-token = { workspace = true }
static_assertions = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
trezoa-logger = { workspace = true }
trezoa-reserved-account-keys = { workspace = true }
assert_matches = { workspace = true }
criterion = { workspace = true }
libsecp256k1 = { workspace = true }
memoffset = { workspace = true }
rand_chacha = { workspace = true }
serde_bytes = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
trezoa-accounts-db = { path = ".", features = ["trezoa-unstable-api", "dev-context-only-utils"] }
trezoa-compute-budget = { workspace = true }
trezoa-instruction = { workspace = true }
trezoa-sdk-ids = { workspace = true }
trezoa-signature = { workspace = true, features = ["rand"] }
trezoa-slot-history = { workspace = true }
trezoa-svm = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
test-case = { workspace = true }

[target.'cfg(not(any(target_env = "msvc", target_os = "freebsd")))'.dev-dependencies]
jemallocator = { workspace = true }

[[bench]]
name = "bench_accounts_file"
harness = false

[[bench]]
name = "bench_hashing"
harness = false

[[bench]]
name = "read_only_accounts_cache"
harness = false

[[bench]]
name = "bench_serde"
harness = false

[[bench]]
name = "bench_lock_accounts"
harness = false

[lints]
workspace = true
